@@ -2,3 +2,4 @@
 *.min.js
 *.min.css
 RELEASE
+games/
