@@ -9,6 +9,19 @@ function AjaxCallback(data) {
 	appx.context.fetchHandle = setTimeout(() => { GetFieldViaAjax() }, 3000);
 }
 
+'static'; function StartGame() {
+	ClearFontSizeCache(); // To prevent bugs related to word rendering
+	appx.context.gameId = $(ID('InputSeed')).value;
+	appx.context.game = GenerateGame();
+
+	if (appx.context.online) {
+		SetAjaxResponseCallback(AjaxCallback);
+		appx.context.fetchHandle = setTimeout(() => { GetFieldViaAjax() }, 500);
+	}
+
+	appx.DisplayPage(ID('PageGame'));
+}
+
 /* MAIN PAGE */
 appx.AddPage(
 	ID('PageMain'),
@@ -16,16 +29,7 @@ appx.AddPage(
 	RenderMainPageContent,
 	[
 		new AppJsButton('Hrajem!', () => {
-			ClearFontSizeCache(); // To prevent bugs related to word rendering
-			appx.context.gameId = $(ID('InputSeed')).value;
-			appx.context.game = GenerateGame();
-
-			if (appx.context.online) {
-				SetAjaxResponseCallback(AjaxCallback);
-				appx.context.fetchHandle = setTimeout(() => { GetFieldViaAjax() }, 500);
-			}
-
-			appx.DisplayPage(ID('PageGame'));
+			StartGame();
 		}),
 		new AppJsButton('Nastavení', () => {
 			appx.DisplayPage(ID('PageSettings'));
